distribution/oidc-auth/base/auth-authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-allow-in-cluster-redirect
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
  - to:
    - operation:
        hosts:
        - auth.test.kubeflow.honestbank.com
        - dashboard.test.kubeflow.honestbank.com   # needed for redirect after authentication
        - serving.test.kubeflow.honestbank.com   # needed for redirect after authentication
        - '*.serving.test.kubeflow.honestbank.com' # needed for redirect after authentication
        - kubecost.test.kubeflow.honestbank.com # needed for redirect after authentication
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-allow-access
  namespace: auth
spec:
  action: ALLOW
  rules:
  - {}
  # - from:
  #   - source:
  #       namespaces:
  #       - auth
  #       - istio-system
